--- a/Task3/pinfo/pom.xml
+++ b/Task3/pinfo/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>by.aliakseishysh.pinfo</groupId>
@@ -26,7 +26,8 @@
                 <version>3.2.4</version>
                 <configuration>
                     <transformers>
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                        <transformer
+                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>by.aliakseishysh.pinfo.App</mainClass>
                         </transformer>
                     </transformers>
@@ -148,8 +149,5 @@
             <artifactId>micrometer-core</artifactId>
             <version>1.7.4</version>
         </dependency>
-
-
-
     </dependencies>
 </project>
